# WICOM-ROS1-CORE

./: README.md
src/front_cam_aruco/: CMakeLists.txt  README.md  calculate_front_angle.py  package.xml  usb_camera.launch
src/front_cam_aruco/config/: front_cam_calibration.yaml
src/front_cam_aruco/launch/: front_cam_aruco.launch  front_cam_aruco_robust.launch
src/front_cam_aruco/scripts/: aruco_front_overlay.py  calculate_front_angle.py  create_theoretical_matrix.py  front_aruco_detect.py  rl_target_visualizer.py  robot_ik_fk.py  robust_aruco_node.py  ros_calibrate_system.py  verify_matrix.py
src/front_cam_aruco/www/: index.html
src/wicom_ai/: CMakeLists.txt  README.md  package.xml
src/wicom_ai/config/: inference.yaml
src/wicom_ai/launch/: dataset_logger.launch  inference.launch
src/wicom_ai/scripts/: dataset_logger.py  inference_node.py
src/wicom_roboarm/: CMakeLists.txt  package.xml
src/wicom_roboarm/config/: servos.yaml
src/wicom_roboarm/launch/: wicom_roboarm.launch
src/wicom_roboarm/src/: test-vl53.py  wicom_roboarm_unified_node.py
src/wicom_roboarm/srv/: SetAngle.srv
src/wicom_udp/: CMakeLists.txt  package.xml
src/wicom_udp/include/wicom_udp/: UdpServer.h
src/wicom_udp/launch/: wicom_udpserver.launch
src/wicom_udp/src/: UdpServer.cpp
src/wicom_udp/srv/: Navigate.srv  NavigateGlobal.srv  Takeoff.srv
src/wicom_webrtc/: CMakeLists.txt  README.md  package.xml
src/wicom_webrtc/include/wicom_webrtc/: wicom_webrtc_adapter.h
src/wicom_webrtc/launch/: stream.launch
src/wicom_webrtc/scripts/: install_deps.sh
src/wicom_webrtc/signaling/: server.js
src/wicom_webrtc/src/: signaling_client.cpp  wicom_webrtc_adapter.cpp  wicom_webrtc_streamer_node.cpp
