<?xml version="1.0"?>
<package format="2">
  <name>front_cam_aruco</name>
  <version>0.3.0</version>
  <description>Front-facing USB camera ArUco integration (OpenCV) for Clover drone: angle computation web visualization.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <roslaunch/>
  </export>
</package>