<?xml version="1.0"?>
<package format="2">
  <name>wicom_path_following</name>
  <version>0.1.0</version>
  <description>Path following for Drone using ROS Noetic and ONNX inference.</description>
  <maintainer email="phuocnguyen.bk62@gmail.com">cinos</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Runtime deps: onnxruntime, numpy, opencv-python, pillow, torch (for training scripts only) -->
</package>